--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,12 @@ Version: 0.0-1
 Date: 2016-11-26
 Author: Peter Solymos
 Maintainer: Peter Solymos <solymos@ualberta.ca>
-Description: Function for evaluating if values 
+Description: Functions for evaluating if values 
   of vectors are within intervals
   using a `x %()% c(a, b)` style notation for comparing 
   values of x with (a, b) interval to get a < x < b evaluated.
-  Interval endpoint can be open (`(`, `)`) or closed (`[` or `]`)
-  including 8 combinations.
+  Interval endpoints can be open (`(`, `)`) or closed (`[`, `]`)
+  including 8 different combinations.
 License: GPL-2
 URL: https://github.com/psolymos/intrval
 BugReports: https://github.com/psolymos/intrval/issues
