--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 export("intrval",
     "%[]%", "%[)%", "%(]%", "%()%",
     "%][%", "%](%", "%)[%", "%)(%",
-    "intrval_types", "print_intrval", "plot_intrval")
+    "intrval_types", "print_intrval", "plot_intrval",
+    "%!in%)
 
 importFrom("graphics", "lines", "par", "plot", "points", "text")
