--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,6 @@ export("intrval",
     "%[]%", "%[)%", "%(]%", "%()%",
     "%][%", "%](%", "%)[%", "%)(%",
     "intrval_types", "print_intrval", "plot_intrval",
-    "%!in%")
+    "%notin%")
 
 importFrom("graphics", "lines", "par", "plot", "points", "text")
