--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,10 @@
 export(
-    "%[]%", "%[)%", "%(]%", "%()%",
-    "%][%", "%](%", "%)[%", "%)(%",
-    "%[<]%", "%[<)%", "%(<]%", "%(<)%",
-    "%[>]%", "%[>)%", "%(>]%", "%(>)%",
-    "intrval_types", "print_intrval", "plot_intrval",
+    "%[]%",  "%[)%",  "%(]%",   "%()%",
+    "%)(%",  "%)[%",  "%](%",   "%][%",
+    "%[<]%", "%[<)%", "%(<]%",  "%(<)%",
+    "%[>]%", "%[>)%", "%(>]%",  "%(>)%",
+    "%[o]%", "%)o(%", "%[<o]%", "%[o>]%",
     "%notin%",
-    "%[o]%", "%)o(%",
-    "%[<o]%", "%[o>]%")
+    "intrval_types", "print_intrval", "plot_intrval")
 
 importFrom("graphics", "lines", "par", "plot", "points", "text")
