--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,11 @@ Version: 0.0-1
 Date: 2016-11-26
 Author: Peter Solymos
 Maintainer: Peter Solymos <solymos@ualberta.ca>
-Description: Functions for evaluating if values 
-  of vectors are within intervals
-  using a `x %()% c(a, b)` style notation for comparing 
-  values of x with (a, b) interval to get a < x < b evaluated.
-  Interval endpoints can be open (`(`, `)`) or closed (`[`, `]`)
-  including 8 different combinations.
+Description: Evaluating if values 
+  of vectors are within different open/closed intervals
+  (`x %[]% c(a, b)`), or if two closed
+  intervals overlap (`c(a1, b1) %[o]% c(a2, b2)`).
+  Negation and directional relations can also be assessed.
 License: GPL-2
 URL: https://github.com/psolymos/intrval
 BugReports: https://github.com/psolymos/intrval/issues
