--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Evaluating if values
   of vectors are within different open/closed intervals
   (`x %[]% c(a, b)`), or if two closed
   intervals overlap (`c(a1, b1) %[o]% c(a2, b2)`).
-  Negation and directional relations can also be assessed.
+  Operators for negation and directional relations also implemented.
 License: GPL-2
 URL: https://github.com/psolymos/intrval
 BugReports: https://github.com/psolymos/intrval/issues
