--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Relational Operators for Intervals
 Version: 0.1-3
 Date: 2024-05-19
-Author: Peter Solymos
+Author: Peter Solymos [cre, aut] (<https://orcid.org/0000-0001-7337-1740>)
 Maintainer: Peter Solymos <psolymos@gmail.com>
 Description: Evaluating if values
   of vectors are within different open/closed intervals
